# cpp-game-starter

./: .gitignore  CMakeLists.txt  Dockerfile
src/: main.cpp
